--- a/src/components/cocktailList/index.scss
+++ b/src/components/cocktailList/index.scss
@@ -1,2 +1,8 @@
 .CocktailList {
+  display: flex;
+  gap: 200px;
+  width: 90vw;
+  overflow-x: auto;
+  overflow-y: hidden;
+  scroll-behavior: smooth;
 }
