--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -1,2 +1,14 @@
 .Footer {
+  margin-top: 300px;
+  height: 400px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 40px;
+  padding: 10px;
+  color: rgb(187, 187, 187);
+
+  div {
+    width: 200px;
+  }
 }
