--- a/src/components/cocktailItem/index.scss
+++ b/src/components/cocktailItem/index.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables";
+
 .CocktailItem {
   position: relative;
   &__card {
@@ -7,9 +9,12 @@
     cursor: pointer;
 
     &__image {
+      box-sizing: border-box;
       height: 100%;
       width: 100%;
       object-fit: cover;
+      border: dotted 7px $active-color;
+      border-radius: 50%;
     }
 
     &__name {
@@ -17,8 +22,8 @@
       font-size: 1.5rem;
       bottom: 0;
       right: -15px;
-      color: rgb(255, 255, 255);
-      background-color: #4a2c20;
+      color: $primary-color;
+      background-color: $secondary-color;
       padding: 3px 10px;
       border-radius: 5px;
       box-shadow: 3px 3px 10px rgba(255, 255, 255, 0.055);
