--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -1,12 +1,16 @@
+@import "../../styles/variables";
+
 .Footer {
   margin-top: 300px;
-  height: 400px;
+  height: 500px;
+  width: 80vw;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  gap: 40px;
+  gap: 30px;
   padding: 10px;
-  color: rgb(187, 187, 187);
+  color: $secondary-color;
+  flex-wrap: wrap;
 
   div {
     width: 200px;
