--- a/src/components/hero/index.scss
+++ b/src/components/hero/index.scss
@@ -1,17 +1,25 @@
+@import "../../styles/variables";
+
 .Hero {
   height: 80vh;
   width: 100vw;
-  background-image: url("https://images.pexels.com/photos/1189257/pexels-photo-1189257.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
-  filter: grayscale(0.8) contrast(1.3);
+  background-image: linear-gradient(
+      360deg,
+      $primary-color 10%,
+      rgba(31, 31, 31, 0.925) 60%,
+      rgba(0, 0, 0, 0.575)
+    ),
+    url("https://images.pexels.com/photos/1189257/pexels-photo-1189257.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background-blend-mode: grayscale;
   object-fit: cover;
   position: relative;
 
   h1 {
-    color: white;
-    background-color: #863f1eaf;
+    color: $primary-color;
+    background-color: $secondary-color;
     position: absolute;
-    font-size: 6rem;
-    left: 50%;
+    font-size: 4rem;
+    left: calc(100vw - 90%);
     top: 300px;
     padding: 20px 70px 20px 20px;
   }
