--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import "./styles/variables";
+
 body {
   margin: 0;
   padding: 0;
@@ -5,5 +7,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #131816;
+  background-color: $primary-color;
+}
+
+::selection {
+  background-color: $active-secondary-color;
 }
