--- a/src/components/cocktailItem/index.scss
+++ b/src/components/cocktailItem/index.scss
@@ -1,12 +1,11 @@
 @import "../../styles/variables";
+@import "../../styles/mixin";
 
 .CocktailItem {
   position: relative;
+
   &__card {
-    height: 300px;
-    width: 280px;
-    position: relative;
-    cursor: pointer;
+    @include card-type;
 
     &__image {
       box-sizing: border-box;
@@ -26,7 +25,7 @@
       background-color: $secondary-color;
       padding: 3px 10px;
       border-radius: 5px;
-      box-shadow: 3px 3px 10px rgba(255, 255, 255, 0.055);
+      box-shadow: 0 4px 4px $active-secondary-color;
     }
   }
 
@@ -39,11 +38,6 @@
     height: 110%;
     width: 120%;
     padding: 30px;
-    visibility: hidden;
     cursor: pointer;
-  }
-
-  .show {
-    visibility: visible;
   }
 }
