--- a/src/components/hero/index.scss
+++ b/src/components/hero/index.scss
@@ -22,5 +22,9 @@
     left: calc(100vw - 90%);
     top: 300px;
     padding: 20px 70px 20px 20px;
+
+    @media (max-width: 680px) {
+      font-size: 3rem;
+    }
   }
 }
