--- a/src/components/navbar/index.scss
+++ b/src/components/navbar/index.scss
@@ -1,11 +1,9 @@
 @import "../../styles/variables";
+@import "../../styles/mixin";
 
 .Navbar {
+  @include flex-container(30px);
   box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 30px;
   position: relative;
 
   &__logo {
@@ -23,13 +21,10 @@
   }
 
   &__content {
+    @include flex-container(20px);
     height: 40px;
     list-style-type: none;
-    padding: 0;
-    display: flex;
-    align-items: center;
     padding: 20px;
-    gap: 20px;
     font-weight: bold;
     color: rgb(0, 0, 0);
     background-color: $secondary-color;
