--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,3 +2,4 @@ $primary-color: #131816;
 $secondary-color: #e9e9e9;
 $active-color: #f26f3e;
 $active-secondary-color: #ff9a4148;
+$bordotto: dotted 7px $active-color;
