--- a/src/components/cocktailDetail/index.module.scss
+++ b/src/components/cocktailDetail/index.module.scss
@@ -13,35 +13,35 @@
   position: relative;
   box-shadow: 4px 4px 6px $active-secondary-color;
 
-  &__text {
+  .text {
     height: 100%;
     width: 55%;
     border-right: 1px solid $primary-color;
     @include flex-container(0, column);
 
-    &--title {
+    .title {
       height: 20%;
       color: $active-color;
     }
 
-    &--tags {
+    .tags {
       height: 10%;
     }
 
-    &--instructions {
+    .textInstructions {
       height: 70%;
       padding: 0 50px;
     }
   }
 
-  &__image {
+  .image {
     width: 300px;
     height: 300px;
     border-radius: 50%;
     border: $bordotto;
   }
 
-  &__button {
+  .button {
     position: absolute;
     top: 35px;
     right: 35px;
