--- a/src/components/navbar/index.module.scss
+++ b/src/components/navbar/index.module.scss
@@ -12,29 +12,16 @@
     position: absolute;
     top: 10px;
     left: 10px;
-
-    @media (max-width: 680px) {
-      height: 38px;
-      top: 0;
-      left: 0;
-    }
   }
 
-  .content {
-    @include flex-container(20px);
-    height: 40px;
-    list-style-type: none;
-    padding: 20px;
-    font-weight: bold;
-    color: rgb(0, 0, 0);
+  .hamburger {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+    font-size: 2em;
     background-color: $secondary-color;
 
-    li {
-      cursor: pointer;
-
-      &:hover {
-        color: $active-color;
-      }
-    }
+    @include hide-component;
   }
 }
