--- a/src/components/footer/index.module.scss
+++ b/src/components/footer/index.module.scss
@@ -1,15 +1,13 @@
-@import "../../styles/variables";
-@import "../../styles/mixin";
-
 .Footer {
   @include flex-container(30px, row, space-between, flex-start);
+  @include size(80vw, 500px);
+  @include flex-wrap(flex-wrap);
+  @media (max-width: 780px) {
+    flex-direction: column;
+  }
   margin-top: 200px;
-  height: 500px;
-  width: 80vw;
   padding: 10px;
   color: $secondary-color;
-  flex-wrap: wrap;
-
   div {
     width: 200px;
   }
