background cover fix

--- a/src/components/hero/index.module.scss
+++ b/src/components/hero/index.module.scss
@@ -8,6 +8,7 @@
       rgba(0, 0, 0, 0.575)
     ),
     url("https://images.pexels.com/photos/1189257/pexels-photo-1189257.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background-size: cover;
   background-blend-mode: grayscale;
   object-fit: cover;
   position: relative;
